--- a/KartaPracy.csproj
+++ b/KartaPracy.csproj
@@ -302,6 +302,10 @@
     <Compile Include="Migrations\201711070950150_AddKartaZIDSklep.Designer.cs">
       <DependentUpon>201711070950150_AddKartaZIDSklep.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711081246165_JakiesZmiany.cs" />
+    <Compile Include="Migrations\201711081246165_JakiesZmiany.Designer.cs">
+      <DependentUpon>201711081246165_JakiesZmiany.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\FormatSklepu.cs" />
@@ -744,6 +748,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711070950150_AddKartaZIDSklep.resx">
       <DependentUpon>201711070950150_AddKartaZIDSklep.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711081246165_JakiesZmiany.resx">
+      <DependentUpon>201711081246165_JakiesZmiany.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
