--- a/KartaPracy.csproj
+++ b/KartaPracy.csproj
@@ -270,6 +270,10 @@
     <Compile Include="Migrations\201711221722587_ZmianaParking.Designer.cs">
       <DependentUpon>201711221722587_ZmianaParking.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711230657307_DodanieNrSpotkania.cs" />
+    <Compile Include="Migrations\201711230657307_DodanieNrSpotkania.Designer.cs">
+      <DependentUpon>201711230657307_DodanieNrSpotkania.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\FormatSklepu.cs" />
@@ -648,6 +652,7 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Scripts\jquery-3.2.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.2.1.min.map" />
+    <Content Include="Views\KartaKontaktu\Details.cshtml" />
     <None Include="Views\KartaKontaktu\Index.cshtml" />
     <Content Include="Views\KartaKontaktu\ZdarzenieFormularz.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
@@ -674,6 +679,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711221722587_ZmianaParking.resx">
       <DependentUpon>201711221722587_ZmianaParking.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711230657307_DodanieNrSpotkania.resx">
+      <DependentUpon>201711230657307_DodanieNrSpotkania.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
